# bigledmatrix

./: .gitignore  Cargo.toml  README.md  convert.py  convert2.py  debug.gdb  dim.py  memory.x  play.py  speedtest.py
src/: main.rs  matrix.rs  usb.rs
